# n3proof.rs

./: .gitignore  Cargo.toml  README.md
examples/: basic_reasoning.rs
src/: error.rs  lib.rs  model.rs  parser.rs  proof.rs  reasoner.rs  utils.rs
tests/: eye_proofs_test.rs  mock_proof.n3
