[package]
name = "n3proof"
version = "0.1.0"
edition = "2021"
authors = ["n3proof Contributors"]
description = "A Notation3 (N3) proof engine implemented in Rust"
license = "MIT"
repository = "https://github.com/jeswr/n3proof.rs"
keywords = ["notation3", "n3", "rdf", "semantic-web", "reasoning"]

[dependencies]
# RDF parsing and manipulation
rio_api = "0.7"
rio_turtle = "0.7"
rio_xml = "0.7"
oxrdf = "0.1"
oxiri = "0.2"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
log = "0.4"
env_logger = "0.10"

# CLI utilities (optional, for future command-line tools)
clap = { version = "4.3", features = ["derive"], optional = true }

[features]
default = []
cli = ["clap"]

[dev-dependencies]
pretty_assertions = "1.4"
